unpackaged/main/default/objects/DocuSignAPICred__c/DocuSignAPICred__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DocuSign API Credentials</label>
</CustomObject>