unpackaged/main/default/objects/DocuSignAPICred__c/fields/EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>EndpointURL__c</fullName>
    <label>EndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>