unpackaged/main/default/objects/DocuSignAPICred__c/fields/Integrator_Key__c.field-meta.xml
<CustomField>
    <fullName>Integrator_Key__c</fullName>
    <label>Integrator Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>