unpackaged/main/default/objects/DocuSignAPICred__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>DSPassword</label>
    <length>20</length>
    <type>Text</type>
</CustomField>