unpackaged/main/default/objects/DocuSignAPICred__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>